# medial-axis-transform-2d-linux

./: CMakeLists.txt  README.MD
